Update app gpt-researcher

--- a/user-console/gpt-researcher/chart/templates/secret.yaml
+++ b/user-console/gpt-researcher/chart/templates/secret.yaml
@@ -7,22 +7,18 @@ metadata:
 type: Opaque
 data:
   {{- if eq .Values.llm.provider "openai" }}
-  OPENAI_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
-  {{- else if eq .Values.llm.provider "azureopenai" }}
-  AZURE_OPENAI_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
-  {{- else if eq .Values.llm.provider "google" }}
-  GEMINI_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
+  OPENAI_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}  
   {{- end }}
   {{- if eq .Values.retriever.provider "BingSearch" }}
-  BING_API_KEY: {{ .Values.retriever.api_key | toString | b64enc | quote }}
+  BING_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "google" }}
-  GOOGLE_API_KEY: {{ .Values.retriever.api_key | toString | b64enc | quote }}
+  GOOGLE_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "searx" }}
-  SEARX_URL: {{ .Values.retriever.api_key | toString | b64enc | quote }}
+  SEARX_URL: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "serpapi" }}
-  SERPAPI_API_KEY: {{ .Values.retriever.api_key | toString | b64enc | quote }}
+  SERPAPI_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "googleSerp" }}
-  SERPER_API_KEY: {{ .Values.retriever.api_key | toString | b64enc | quote }}
+  SERPER_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "tavily" }}
-  TAVILY_API_KEY: {{ .Values.retriever.api_key | toString | b64enc | quote }}
+  TAVILY_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- end }}
