Update READMEs and fix some problems

--- a/user-console/nextchat/chart/templates/secret.yaml
+++ b/user-console/nextchat/chart/templates/secret.yaml
@@ -7,11 +7,11 @@ metadata:
 type: Opaque
 data:
   {{- if eq .Values.llm.provider "openai" }}
-  OPENAI_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
+  OPENAI_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.llm.provider "azure" }}
-  AZURE_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
+  AZURE_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.llm.provider "anthropic" }}
-  ANTHROPIC_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
+  ANTHROPIC_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.llm.provider "google" }}
-  GOOGLE_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
+  GOOGLE_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}
   {{- end }}
