--- a/user-console/search-with-lepton/chart/templates/secret.yaml
+++ b/user-console/search-with-lepton/chart/templates/secret.yaml
@@ -6,13 +6,13 @@ metadata:
     {{- include "search-with-lepton.labels" . | nindent 4 }}
 type: Opaque
 data:
-  OPENAI_API_KEY: {{ .Values.llm.api_key | toString | b64enc | quote }}
+  OPENAI_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}
   {{- if eq .Values.searchEngine.provider "BING" }}
-  BING_SEARCH_V7_SUBSCRIPTION_KEY: {{ .Values.searchEngine.api_key | toString | b64enc | quote }}
+  BING_SEARCH_V7_SUBSCRIPTION_KEY: {{ .Values.searchEngine.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.searchEngine.provider "GOOGLE" }}
-  GOOGLE_SEARCH_API_KEY: {{ .Values.searchEngine.api_key | toString | b64enc | quote }}
+  GOOGLE_SEARCH_API_KEY: {{ .Values.searchEngine.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.searchEngine.provider "SERPER" }}
-  SERPER_SEARCH_API_KEY: {{ .Values.searchEngine.api_key | toString | b64enc | quote }}
+  SERPER_SEARCH_API_KEY: {{ .Values.searchEngine.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.searchEngine.provider "SEARCHAPI" }}
-  SEARCHAPI_API_KEY: {{ .Values.searchEngine.api_key | toString | b64enc | quote }}
+  SEARCHAPI_API_KEY: {{ .Values.searchEngine.apiKey | toString | b64enc | quote }}
   {{- end }}
