Update app ollama and open-webui

--- a/user-console/ollama/configs/v0_35.yaml
+++ b/user-console/ollama/configs/v0_35.yaml
@@ -30,33 +30,25 @@ ollama:
     number: 1
 
   # The more you add, the longer the container will take to start if models are not present
-  # models:
+  models: []
   #  - llama3
   #  - mistral
-  models: []
 
   insecure: false
 
-## @param runtimeClassName Specify runtime class
-##
-runtimeClassName: ""
-
 ## @param service.type Service type
 ## @param service.port Service port
-## @param service.nodePort Service node port when service type is 'NodePort'
-## @param service.annotations Annotations to add to the service
 ##
 service:
   type: ClusterIP
   port: 11434
-  nodePort: 31434
-  annotations: {}
 
 ## @param ingress.enabled Enable ingress controller resource
 ## @param ingress.className IngressClass that will be used to implement the Ingress (Kubernetes 1.18+)
 ## @param ingress.annotations Additional annotations for the Ingress resource
 ## @param ingress.hosts List of hostnames to be covered with this ingress record
 ## @param ingress.tls The tls configuration for hostnames to be covered with this ingress record
+##
 ingress:
   enabled: false
   className: ""
@@ -79,7 +71,7 @@ ingress:
 ## @param resources.limits.cpu CPU limit for the Ollama server pod
 ## @param resources.limits.memory Memory limit for the Ollama server pod
 ##
-resources:
+resources:  # do NOT add `nvidia.com/gpu` manually
   requests:
     cpu: 8
     # cpu: 1  # if gpu is enabled
@@ -90,50 +82,6 @@ resources:
     # cpu: 1  # if gpu is enabled
     memory: 16Gi
 
-## @param livenessProbe.enabled Enable livenessProbe
-## @param livenessProbe.path Request path for livenessProbe
-## @param livenessProbe.initialDelaySeconds Initial delay seconds for livenessProbe
-## @param livenessProbe.periodSeconds Period seconds for livenessProbe
-## @param livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
-## @param livenessProbe.failureThreshold Failure threshold for livenessProbe
-## @param livenessProbe.successThreshold Success threshold for livenessProbe
-##
-livenessProbe:
-  enabled: true
-  path: /
-  initialDelaySeconds: 60
-  periodSeconds: 10
-  timeoutSeconds: 5
-  failureThreshold: 6
-  successThreshold: 1
-
-## @param readinessProbe.enabled Enable readinessProbe
-## @param readinessProbe.path Request path for readinessProbe
-## @param readinessProbe.initialDelaySeconds Initial delay seconds for readinessProbe
-## @param readinessProbe.periodSeconds Period seconds for readinessProbe
-## @param readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
-## @param readinessProbe.failureThreshold Failure threshold for readinessProbe
-## @param readinessProbe.successThreshold Success threshold for readinessProbe
-##
-readinessProbe:
-  enabled: true
-  path: /
-  initialDelaySeconds: 30
-  periodSeconds: 5
-  timeoutSeconds: 3
-  failureThreshold: 6
-  successThreshold: 1
-
-## @param extraArgs Additional arguments on the output Deployment definition
-##
-extraArgs: []
-
-## @param extraEnv Additional environments variables on the output Deployment definition
-##
-extraEnv: []
-#  - name: OLLAMA_DEBUG
-#    value: "1"
-
 ## @param persistentVolume.enabled Enable persistence using Persistent Volume Claims
 ## @param persistentVolume.accessModes Ollama server data Persistent Volume access modes
 ## @param persistentVolume.annotations Ollama server data Persistent Volume annotations
@@ -142,6 +90,7 @@ extraEnv: []
 ## @param persistentVolume.storageClass Ollama server data Persistent Volume Storage Class
 ## @param persistentVolume.volumeMode Ollama server data Persistent Volume Binding Mode
 ## @param persistentVolume.subPath Subdirectory of Ollama server data Persistent Volume to mount
+##
 persistentVolume:
   enabled: false
   accessModes:
@@ -155,17 +104,3 @@ persistentVolume:
   storageClass: ""
   volumeMode: ""
   subPath: ""
-
-## @param updateStrategy.type How to replace existing pods (`Recreate` or `RollingUpdate`)
-##
-updateStrategy:
-  type: ""
-
-## @param initContainers Init containers to add to the pod
-##
-initContainers: []
-# - name: startup-tool
-#   image: alpine:3
-#   command: [sh, -c]
-#   args:
-#     - echo init
