--- a/user-console/open-webui/chart/values.yaml
+++ b/user-console/open-webui/chart/values.yaml
@@ -1,36 +1,35 @@
-## @param replicaCount Number of replicas for the deployment
-##
+nameOverride: ""
+
+ollama:
+  # -- Automatically install Ollama Helm chart from https://otwld.github.io/ollama-helm/. Use [Helm Values](https://github.com/otwld/ollama-helm/#helm-values) to configure
+  enabled: true
+  # -- Example Ollama configuration with nvidia GPU enabled, automatically downloading a model, and deploying a PVC for model persistence
+  # ollama:
+  #   gpu:
+  #     enabled: true
+  #     type: 'nvidia'
+  #     number: 1
+  #   models:
+  #     - llama3
+  # runtimeClassName: nvidia
+  # persistentVolume:
+  #   enabled: true
+
+# -- A list of Ollama API endpoints. These can be added in lieu of automatically installing the Ollama Helm chart, or in addition to it.
+ollamaUrls: []
+
+# -- Value of cluster domain
+clusterDomain: cluster.local
+
+annotations: {}
+podAnnotations: {}
 replicaCount: 1
-
-## @param image.registry [default: ghcr.io] Repository registry for the Docker image
-## @param image.repository [default: open-webui/open-webui] Repository name for the Docker image
-## @param image.tag Image tag for the Docker image (immutable tags are recommended)
-## @param image.pullPolicy Image pull policy for the Docker image
-##
+# -- Open WebUI image tags can be found here: https://github.com/open-webui/open-webui/pkgs/container/open-webui
 image:
-  registry: ghcr.io
-  repository: open-webui/open-webui
-  tag: latest
+  repository: ghcr.io/open-webui/open-webui
+  tag: "latest"
   pullPolicy: Always
-
-## @param service.type Service type for the Kubernetes service
-## @param service.port Port for the Kubernetes service
-## @param service.containerPort Port on the container to expose
-## @param service.nodePort Port to bind to on the host
-##
-service:
-  type: ClusterIP
-  port: 80
-  containerPort: 8080
-  nodePort: ""
-
-## @param ingress.enabled Enable/disable Kubernetes ingress
-## @param ingress.class Ingress class name
-## @param ingress.annotations Annotations for Kubernetes ingress
-## @param ingress.host Hostname for the Kubernetes ingress
-## @param ingress.tls Enable/disable TLS for Kubernetes ingress
-## @param ingress.existingSecret Existing TLS secret for Kubernetes ingress
-##
+resources: {}
 ingress:
   enabled: false
   class: ""
@@ -40,55 +39,42 @@ ingress:
   host: ""
   tls: false
   existingSecret: ""
-
-## @param resources.limits.cpu CPU limit for the Ollama server pod
-## @param resources.limits.memory Memory limit for the Ollama server pod
-## @param resources.limits.nvidia-gpu Nvidia GPU limit for the Ollama server pod
-##
-resources:
-  limits:
-    cpu: 1
-    memory: 2Gi
-
-## @param ollama.enabled Enable/disable installation of Ollama Helm chart
-## @param ollama.ollama.gpu.enabled Enable/disable GPU support for Ollama
-## @param ollama.ollama.gpu.type GPU type for Ollama (e.g., nvidia)
-## @param ollama.ollama.gpu.number Number of GPUs to allocate for Ollama
-## @param ollama.ollama.models List of models to be deployed with Ollama
-## @param ollama.resources.requests.cpu CPU request for the Ollama server pod
-## @param ollama.resources.requests.memory Memory request for the Ollama server pod
-## @param ollama.resources.limits.cpu CPU limit for the Ollama server pod
-## @param ollama.resources.limits.memory Memory limit for the Ollama server pod
-## @param ollama.persistentVolume.enabled Enable/disable persistent volume claim (PVC) for model persistence
-##
-ollama:
+persistence:
   enabled: true
-  ollama:
-    gpu:
-      enabled: false
-      type: 'nvidia'
-      number: 1
-    models:
-      - llama3
-  resources:
-    requests:
-      cpu: 8
-      # cpu: 1  # if gpu is enabled
-      memory: 8Gi
-    limits:
-      cpu: 16
-      # cpu: 1  # if gpu is enabled
-      memory: 16Gi
-  persistentVolume:
-    enabled: true
+  size: 2Gi
+  # -- Use existingClaim if you want to re-use an existing Open WebUI PVC instead of creating a new one
+  existingClaim: ""
+  # -- If using multiple replicas, you must update accessModes to ReadWriteMany
+  accessModes:
+    - ReadWriteOnce
+  storageClass: ""
+  selector: {}
+  annotations: {}
 
-## @param ollamaUrls A list of Ollama API endpoints. These can be added in lieu of automatically installing the Ollama Helm chart, or in addition to it.
-##
-ollamaUrls: []
+# -- Node labels for pod assignment.
+nodeSelector: {}
 
-## @param env Array of extra environment variables
-##
-extraEnvVars: []
+# -- Tolerations for pod assignment
+tolerations: []
+
+# -- Affinity for pod assignment
+affinity: {}
+
+# -- Service values to expose Open WebUI pods to cluster
+service:
+  type: ClusterIP
+  annotations: {}
+  port: 80
+  containerPort: 8080
+  nodePort: ""
+  labels: {}
+  loadBalancerClass: ""
+
+# -- OpenAI base API URL to use. Defaults to the Pipelines service endpoint when Pipelines are enabled, and "https://api.openai.com/v1" if Pipelines are not enabled and this value is blank
+openaiBaseApiUrl: ""
+
+# -- Additional environments variables on the output Deployment definition. Most up-to-date environment variables can be found here: https://docs.openwebui.com/getting-started/env-configuration/
+extraEnvVars:
   # - name: OPENAI_API_KEY
   #   valueFrom:
   #     secretKeyRef:
