--- a/user-console/open-webui/template.yaml
+++ b/user-console/open-webui/template.yaml
@@ -12,7 +12,8 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "open-webui"
     versions:
-    - version: 2.1.2
+    - version: 2.1.3
+      config: "file://$APP_DIR/configs/v2_1.yaml"
       urls:
       - name: UI
         url: /t9k/app/open-webui/{{ .Release.Namespace }}/{{ .Release.Name }}/
@@ -23,5 +24,5 @@ template:
           resource: deployments
           name: "{{ .Release.Name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-      dependenciesStatus: "True"
-      dependences: {}
+          desiredStatus: "True"
+      dependencies: {}
