--- a/.github/workflows/release-dify.yml
+++ b/.github/workflows/release-dify.yml
@@ -1,12 +1,11 @@
 name: Release Dify Helm Charts
 
 on:
-  push:
-    tags:
-      - dify-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/dify-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
