--- a/.github/workflows/release-gpt-researcher.yml
+++ b/.github/workflows/release-gpt-researcher.yml
@@ -1,12 +1,11 @@
 name: Release GPT Researcher Helm Charts
 
 on:
-  push:
-    tags:
-      - gpt-researcher-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/gpt-researcher-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
