--- a/.github/workflows/release-label-studio.yml
+++ b/.github/workflows/release-label-studio.yml
@@ -1,12 +1,11 @@
 name: Release Label Studio Helm Charts
 
 on:
-  push:
-    tags:
-      - label-studio-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/label-studio-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
