--- a/.github/workflows/release-nextchat.yml
+++ b/.github/workflows/release-nextchat.yml
@@ -1,12 +1,11 @@
 name: Release NextChat Helm Charts
 
 on:
-  push:
-    tags:
-      - nextchat-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/nextchat-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
