--- a/.github/workflows/release-ollama.yml
+++ b/.github/workflows/release-ollama.yml
@@ -1,12 +1,11 @@
 name: Release Ollama Helm Charts
 
 on:
-  push:
-    tags:
-      - ollama-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/ollama-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
