--- a/.github/workflows/release-search-with-lepton.yml
+++ b/.github/workflows/release-search-with-lepton.yml
@@ -1,12 +1,11 @@
 name: Release Search with Lepton Helm Charts
 
 on:
-  push:
-    tags:
-      - search-with-lepton-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/search-with-lepton-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
