--- a/.github/workflows/release-vllm-smls-llama3.yml
+++ b/.github/workflows/release-vllm-smls-llama3.yml
@@ -1,12 +1,11 @@
 name: Release vLLM (Llama 3) Helm Charts
 
 on:
-  push:
-    tags:
-      - vllm-llama3-*
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/vllm-llama3-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
