--- a/.github/workflows/release-vllm-smls.yml
+++ b/.github/workflows/release-vllm-smls.yml
@@ -1,12 +1,11 @@
 name: Release vLLM Helm Charts
 
 on:
-  push:
-    tags:
-      - "vllm-[0-9].[0-9].[0-9]"
+  create:
 
 jobs:
   release:
+    if: ${{ startsWith(github.ref, 'refs/tags/vllm-0') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
