--- a/user-console/open-webui/template.yaml
+++ b/user-console/open-webui/template.yaml
@@ -12,11 +12,9 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "open-webui"
     versions:
-    - version: 2.1.3
+    - version: 2.1.4
       config: "file://$APP_DIR/configs/v2_1.yaml"
-      urls:
-      - name: UI
-        url: /t9k/app/open-webui/{{ .Release.Namespace }}/{{ .Release.Name }}/
+      urls: []
       readinessProbe:
         resources:
         - group: apps
