--- a/.github/workflows/release-ollama.yml
+++ b/.github/workflows/release-ollama.yml
@@ -1,11 +1,14 @@
 name: Release Ollama Helm Charts
 
 on:
-  create:
+  push:
+    branches:
+      - main
+    paths:
+      - "user-console/ollama/chart/Chart.yaml"
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/ollama-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
