--- a/.github/workflows/release-search-with-lepton.yml
+++ b/.github/workflows/release-search-with-lepton.yml
@@ -1,11 +1,14 @@
 name: Release Search with Lepton Helm Charts
 
 on:
-  create:
+  push:
+    branches:
+      - main
+    paths:
+      - "user-console/search-with-lepton/chart/Chart.yaml"
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/search-with-lepton-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
