--- a/.github/workflows/release-dify.yml
+++ b/.github/workflows/release-dify.yml
@@ -1,11 +1,14 @@
 name: Release Dify Helm Charts
 
 on:
-  create:
+  push:
+    branches:
+      - master
+    paths:
+      - "user-console/dify/chart/Chart.yaml"
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/dify-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
