--- a/.github/workflows/release-gpt-researcher.yml
+++ b/.github/workflows/release-gpt-researcher.yml
@@ -1,11 +1,14 @@
 name: Release GPT Researcher Helm Charts
 
 on:
-  create:
+  push:
+    branches:
+      - master
+    paths:
+      - "user-console/gpt-researcher/chart/Chart.yaml"
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/gpt-researcher-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
