--- a/.github/workflows/release-label-studio.yml
+++ b/.github/workflows/release-label-studio.yml
@@ -1,11 +1,14 @@
 name: Release Label Studio Helm Charts
 
 on:
-  create:
+  push:
+    branches:
+      - master
+    paths:
+      - "user-console/label-studio/chart/Chart.yaml"
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/label-studio-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
