--- a/.github/workflows/release-open-webui.yml
+++ b/.github/workflows/release-open-webui.yml
@@ -1,11 +1,14 @@
 name: Release Open WebUI Helm Charts
 
 on:
-  create:
+  push:
+    branches:
+      - master
+    paths:
+      - "user-console/open-webui/chart/Chart.yaml"
 
 jobs:
   release:
-    if: ${{ startsWith(github.ref, 'refs/tags/open-webui-') }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
