--- a/user-console/label-studio/chart/templates/app-virtualservice.yaml
+++ b/user-console/label-studio/chart/templates/app-virtualservice.yaml
@@ -12,7 +12,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /t9k/app/label-studio/{{ .Release.Namespace }}/{{ .Release.Name }}/
+        prefix: /apps/label-studio/{{ .Release.Namespace }}/{{ .Release.Name }}/
     rewrite:
       uri: /
     route:
