--- a/user-console/label-studio/template.yaml
+++ b/user-console/label-studio/template.yaml
@@ -14,7 +14,7 @@ template:
     - version: 1.4.8
       urls:
       - name: UI
-        url: /t9k/app/label-studio/{{ .Release.Namespace }}/{{ .Release.Name }}/
+        url: /apps/label-studio/{{ .Release.Namespace }}/{{ .Release.Name }}/
       readinessProbe:
         resources:
         - group: apps
