Add dependencies to crd app

--- a/user-console/explorer/template.yaml
+++ b/user-console/explorer/template.yaml
@@ -27,6 +27,11 @@ template:
           name: "{{ .metadata.name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: explorers
 
 ---
 
@@ -59,4 +64,8 @@ template:
           name: "{{ .metadata.name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
-
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: explorers
