--- a/user-console/notebook/template.yaml
+++ b/user-console/notebook/template.yaml
@@ -27,6 +27,11 @@ template:
           name: "{{ .metadata.name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: notebooks
 
 ---
 
@@ -59,6 +64,11 @@ template:
           name: "{{ .metadata.name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: notebooks
 
 ---
 
@@ -91,3 +101,8 @@ template:
           name: "{{ .metadata.name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: notebooks
