--- a/user-console/tensorboard/template.yaml
+++ b/user-console/tensorboard/template.yaml
@@ -27,3 +27,8 @@ template:
           name: "{{ .metadata.name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: tensorboards
