--- a/user-console/postgresql/template.yaml
+++ b/user-console/postgresql/template.yaml
@@ -8,7 +8,7 @@ metadata:
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm:
-    repo: "oci://registry-1.docker.io/bitnamicharts"
+    # repo: "https://charts.bitnami.com/bitnami"
     chart: "postgresql"
     versions:
     - version: 15.5.0
