--- a/user-console/vllm-smls-dcu/chart/templates/simplemlservice.yaml
+++ b/user-console/vllm-smls-dcu/chart/templates/simplemlservice.yaml
@@ -45,17 +45,17 @@ spec:
           - --model=/var/lib/t9k/model
           - --served-model-name={{ .Values.model.deployName }}
           - --trust-remote-code
-          - --tensor-parallel-size={{ .Values.resources.limits.hygon.com/dcu }}
+          - --tensor-parallel-size={{ (index .Values.resources.limits "hygon.com/dcu") }}
           - --enforce-eager
-        {{- if eq .Values.resources.limits.hygon.com/dcu 1 }}
+        {{- if eq (index .Values.resources "limits.hygon.com/dcu") 1 }}
         env:
         - name: HIP_VISIBLE_DEVICES
           value: "0"
-        {{- else if eq .Values.resources.limits.hygon.com/dcu 2 }}
+        {{- else if eq (index .Values.resources "limits.hygon.com/dcu") 2 }}
         env:
         - name: HIP_VISIBLE_DEVICES
           value: "0,1"
-        {{- else if eq .Values.resources.limits.hygon.com/dcu 4 }}
+        {{- else if eq (index .Values.resources "limits.hygon.com/dcu") 4 }}
         env:
         - name: HIP_VISIBLE_DEVICES
           value: "0,1,2,3"
