--- a/user-console/vllm-smls-dcu/template.yaml
+++ b/user-console/vllm-smls-dcu/template.yaml
@@ -9,7 +9,7 @@ metadata:
 template:
   helm:
     repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
+    # repo: "https://t9k.github.io/apps"
     chart: "vllm-dcu"
     versions:
     - version: 0.1.1
