--- a/user-console/notebook/jupyter-lab-dcu/config.yaml
+++ b/user-console/notebook/jupyter-lab-dcu/config.yaml
@@ -8,19 +8,41 @@ spec:
     spec:
       containers:
         - name: notebook
-          image: t9kpublic/torch-2.1.0-notebook:1.78.8
+          securityContext:
+            privileged: true
+            capabilities:
+              add: ["SYS_PTRACE"]
+          image: registry.cn-hangzhou.aliyuncs.com/t9k/jupyterlab-torch-2.1.0:240708-dcu
           volumeMounts:
             - name: workingdir
               mountPath: /t9k/mnt
+            - name: hyhal
+              mountPath: /opt/hyhal
+              readOnly: true
+            - name: dev-kfd
+              mountPath: /dev/kfd
+              readOnly: true
+            - name: dev-dri
+              mountPath: /dev/dri
+              readOnly: true
           ## @param spec.template.spec.containers[0].resources.limits.cpu The maximum number of CPU the notebook can use.
           ## @param spec.template.spec.containers[0].resources.limits.memory The maximum number of CPU the notebook can use.
           resources:
             limits:
               cpu: "4"
               memory: 8Gi
-              nvidia.com/gpu: 1
+              hygon.com/dcu: 1
       volumes:
         - name: workingdir
           persistentVolumeClaim:
             ## @param spec.template.spec.volumes[0].persistentVolumeClaim.claimName Mount a pvc as notebook working directory.
             claimName: ""
+        - name: hyhal
+          hostPath:
+            path: /opt/hyhal
+        - name: dev-kfd
+          hostPath:
+            path: /dev/kfd
+        - name: dev-dri
+          hostPath:
+            path: /dev/dri
