--- a/user-console/terminal/template.yaml
+++ b/user-console/terminal/template.yaml
@@ -10,6 +10,7 @@ metadata:
 template:
   helm: 
     repo: "oci://docker.io/t9kpublic"
+    # repo: "https://t9k.github.io/apps/"
     chart: "terminal"
     versions:
     - version: 0.1.3
